Adding menu starter

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@ body {
 .App {
   font-family: sans-serif;
   text-align: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .menu-button--full {
